# PTS-Paper

./: CMakeLists.txt  README.md  gap_manager.cc  main.cpp  schedule.cc  schedule.hpp  shell.nix  tests.cpp  tower_schedule.cc  tower_schedule.hpp  types.hpp
benchmark/: benchmark_results.csv
benchmark/instances/: inst_n100000_m100000.txt  inst_n10000_m100000.txt  inst_n1000_m100000.txt  inst_n100_m100000.txt  inst_n10100_m100000.txt  inst_n10200_m100000.txt  inst_n10300_m100000.txt  inst_n10400_m100000.txt  inst_n10500_m100000.txt  inst_n10600_m100000.txt  inst_n10700_m100000.txt  inst_n10800_m100000.txt  inst_n10900_m100000.txt  inst_n11000_m100000.txt  inst_n1100_m100000.txt  inst_n11100_m100000.txt  inst_n11200_m100000.txt  inst_n11300_m100000.txt  inst_n11400_m100000.txt  inst_n11500_m100000.txt  inst_n11600_m100000.txt  inst_n11700_m100000.txt  inst_n11800_m100000.txt  inst_n11900_m100000.txt  inst_n12000_m100000.txt  inst_n1200_m100000.txt  inst_n12100_m100000.txt  inst_n12200_m100000.txt  inst_n12300_m100000.txt  inst_n12400_m100000.txt  inst_n12500_m100000.txt  inst_n12600_m100000.txt  inst_n12700_m100000.txt  inst_n12800_m100000.txt  inst_n12900_m100000.txt  inst_n13000_m100000.txt  inst_n1300_m100000.txt  inst_n13100_m100000.txt  inst_n13200_m100000.txt  inst_n13300_m100000.txt  (+960 more)
scripts/: plot_benchmark.py
src/: gap_manager.cc  gap_manager.hpp  main.cpp  mcs.hpp  schedule.cc  schedule.hpp  tower_schedule.cc  tower_schedule.hpp  types.hpp
tests/: tests.cpp
